--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -5,49 +5,40 @@
                 <section class="bg-footer">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-4">
+                            <div class="col-lg-5">
                                 <div class="footer-item mt-4 mt-lg-0 me-lg-5">
                                     <h4 class="text-white mb-4">KINS</h4>
-                                    <p class="text-white-50">File Managing Cloud Flatform for KINS</p>
+                                    <p class="text-white-50">R&D 지원제도 안내 (사업소개에 관한 요약)</p>
 
                                 </div>
                             </div><!--end col-->
                             <div class="col-lg-2 col-6">
                                 <div class="footer-item mt-4 mt-lg-0">
-                                    <p class="fs-16 text-white mb-4">HOME</p>
+                                    <p class="fs-16 text-white mb-4">Homepage</p>
                                     <ul class="list-unstyled footer-list mb-0">
-                                        <li><a href="{% url 'rnd:about' %}"><i class="mdi mdi-chevron-right"></i> About Us</a></li>
-                                        <li><a href="{% url 'services' %}"><i class="mdi mdi-chevron-right"></i> Services</a></li>
-                                        <li><a href="{% url 'blog' %}"><i class="mdi mdi-chevron-right"></i> Blog</a></li>
-                                        <li><a href="{% url 'team' %}"><i class="mdi mdi-chevron-right"></i> Team</a></li>
-                                        <li><a href="{% url 'pricing' %}"><i class="mdi mdi-chevron-right"></i> Pricing</a></li>
+                                        <li><a href="#"><i class="mdi mdi-chevron-right"></i>R&D 지원제도 안내</a></li>
+                                        <li><a href="#"><i class="mdi mdi-chevron-right"></i>R&D 지원검토 사례</a></li>
+                                        <li><a href="#"><i class="mdi mdi-chevron-right"></i>심층처분 데이터베이스</a></li>
+                                        <li><a href="#"><i class="mdi mdi-chevron-right"></i>기관 안내</a></li>
                                     </ul>
                                 </div>
                             </div><!--end col-->
                             <div class="col-lg-2 col-6">
                                 <div class="footer-item mt-4 mt-lg-0">
-                                    <p class="fs-16 text-white mb-4">BULLETIN</p>
+                                    <p class="text-white fs-16 mb-4">Database</p>
                                     <ul class="list-unstyled footer-list mb-0">
-                                        <li><a href="{% url 'job-categories' %}"><i class="mdi mdi-chevron-right"></i>전체 공유 문서함</a></li>
-                                        <li><a href="{% url 'job-list' %}"><i class="mdi mdi-chevron-right"></i>기관별 공유 문서함</a></li>
+                                      <li><a href="#"><i class="mdi mdi-chevron-right"></i>데이터베이스 개요</a></li>
+                                      <li><a href="#"><i class="mdi mdi-chevron-right"></i>규제 사례</a></li>
+                                      <li><a href="#"><i class="mdi mdi-chevron-right"></i>규제 기준</a></li>
                                     </ul>
                                 </div>
                             </div><!--end col-->
                             <div class="col-lg-2 col-6">
                                 <div class="footer-item mt-4 mt-lg-0">
-                                    <p class="text-white fs-16 mb-4">CALENDAR</p>
+                                    <p class="text-white fs-16 mb-4">File Cloud</p>
                                     <ul class="list-unstyled footer-list mb-0">
-                                        <li><a href="{% url 'candidate-list' %}"><i class="mdi mdi-chevron-right"></i> 일정 관리 </a></li>
-                                        <li><a href="{% url 'candidate-grid' %}"><i class="mdi mdi-chevron-right"></i> 알림 </a></li>
-                                    </ul>
-                                </div>
-                            </div><!--end col-->
-                            <div class="col-lg-2 col-6">
-                                <div class="footer-item mt-4 mt-lg-0">
-                                    <p class="fs-16 text-white mb-4">CONTACT</p>
-                                    <ul class="list-unstyled footer-list mb-0">
-                                        <li><a href="{% url 'faqs' %}"><i class="mdi mdi-chevron-right"></i> FAQ's</a></li>
-                                        <li><a href="{% url 'privacy-policy' %}"><i class="mdi mdi-chevron-right"></i> Privacy & Policy</a></li>
+                                        <li><a href="{% url 'candidate-list' %}"><i class="mdi mdi-chevron-right"></i> 파일 공유 게시판 </a></li>
+                                        <li><a href="{% url 'candidate-grid' %}"><i class="mdi mdi-chevron-right"></i> 알림 관리 </a></li>
                                     </ul>
                                 </div>
                             </div><!--end col-->
@@ -61,14 +52,12 @@
                         <div class="row">
                             <div class="col-lg-10">
                                 <p class="text-white-50 text-center mb-0">
-                                    <script>document.write(new Date().getFullYear())</script> &copy; (주)엔씨스퀘어 - KINS File Cloud by <a href="http://ncsquare.co.kr/" target="_blank"
+                                    <script>document.write(new Date().getFullYear())</script> &copy; (주)엔씨스퀘어 - Copyright by <a href="http://ncsquare.co.kr/" target="_blank"
                                         class="text-reset text-decoration-underline">NCS</a>
                                 </p>
                             </div><!--end col-->
 
 
-                            <div class="col-lg-2"><a href="{% url 'index' %}"
-                                class="text-reset text-decoration-underline">File Cloud Service</a></div>
                         </div><!--end row-->
                     </div><!--end container-->
                 </div>
