--- a/templates/rnd/institute.html
+++ b/templates/rnd/institute.html
@@ -47,23 +47,23 @@
                                     <div class="d-none d-lg-block card" style="padding: 12px; position:sticky; top:90px;">
                                         <ul class="nav nav-pills flex-column" id="elementsBar">
                                             <li class="nav-item">
-                                                <a href="#typography" class="nav-link">검토기관 소개</a>
+                                                <a href="#intro" class="nav-link">검토기관 소개</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="#buttons" class="nav-link">검토기관 안내</a>
+                                                <a href="#about" class="nav-link">검토기관 안내</a>
                                             </li>
 
                                             <li class="nav-item">
-                                                <a href="#grid" class="nav-link">조직도/연락처</a>
+                                                <a href="#contact" class="nav-link">조직도/연락처</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a href="#video" class="nav-link">오시는길</a>
+                                                <a href="#location" class="nav-link">오시는길</a>
                                             </li>
                                         </ul>
                                     </div><!--end ui-elements-->
                                 </div><!--end col-->
                                 <div class="col-lg-8">
-                                    <div class="card"  id="typography">
+                                    <div class="card"  id="intro">
                                         <div class="p-4 border-bottom">
                                             <h5 class="mb-0">검토기관 소개</h5>
                                         </div>
@@ -75,7 +75,7 @@
 
                                         </div>
                                     </div>
-                                    <div class="card mt-4">
+                                    <div class="card mt-4" id="about">
                                         <div class="p-4 border-bottom">
                                             <h5 class="mb-0">검토기관 안내</h5>
                                         </div>
@@ -84,7 +84,7 @@
 
                                         </div>
                                     </div>
-                                    <div class="card mt-4" id="images">
+                                    <div class="card mt-4" id="contact">
                                         <div class="p-4 border-bottom">
                                             <h5 class="mb-0">조직도/연락처 </h5>
                                         </div>
@@ -97,7 +97,7 @@
                                         </div>
                                     </div><!--end images-->
 
-                                    <div class="card mt-4" id="modals">
+                                    <div class="card mt-4" id="location">
                                         <div class="p-4 border-bottom">
                                             <h5 class="mb-0">오시는길</h5>
                                         </div>
