--- a/templates/kinsdb/docs-detail.html
+++ b/templates/kinsdb/docs-detail.html
@@ -1,4 +1,4 @@
-{% extends 'partials/base.html' %}
+{% extends 'partials/rnd_base.html' %}
 {% load static %}
 {% load split %}
 {% block title %}Candidate Details{% endblock title %}
