--- a/templates/rnd/institute.html
+++ b/templates/rnd/institute.html
@@ -12,9 +12,8 @@
                                         <div class="page-next">
                                             <nav class="d-inline-block" aria-label="breadcrumb text-center">
                                                 <ol class="breadcrumb justify-content-center">
-                                                    <li class="breadcrumb-item"><a href="{% url 'index'%}">Home</a></li>
-                                                    <li class="breadcrumb-item"><a href="javascript:void(0)">Company</a></li>
-                                                    <li class="breadcrumb-item active" aria-current="page"> Components </li>
+                                                    <li class="breadcrumb-item"><a href="{% url 'index'%}">Homepage</a></li>
+                                                    <li class="breadcrumb-item active" aria-current="page"> 기관소개 </li>
                                                 </ol>
                                             </nav>
                                         </div>
